--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^8.0",
         "bugsnag/bugsnag-laravel": "^2.20",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
@@ -22,6 +22,7 @@
         "laraveldaily/laravel-charts": "^0.1.24",
         "nuovo/spreadsheet-reader": "^0.5.11",
         "orangehill/iseed": "^3.0",
+        "rachidlaasri/laravel-installer": "^4.1",
         "spatie/laravel-medialibrary": "^8.7",
         "yajra/laravel-datatables-oracle": "^9.11"
     },
